resource-lead-agent/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-lead-agent
spec:
  type: ClusterIP
  ports:
    - name: raft
      port: 8080
      targetPort: raft
      protocol: TCP
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
