resource-lead-agent/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-lead-agent
spec:
  rules:
    - http:
        paths:
          - path: /swarmchestrate
            pathType: Prefix
            backend:
              service:
                name: resource-lead-agent
                port:
                  number: 8081
